--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
    margin-left: 40px;
 }
 
-.head div, #recipe-outer {
+.head div {
    display: inline-flex;
    background-color: #1f0047;
    border-radius: 15px;
@@ -19,10 +19,11 @@
    align-items: stretch;
    margin: 30px;
 }
-
-#main-inner h1, #recipe-outer h1{
-   padding: 10px;
+#main-inner h1 {
    text-align: center;
+}
+#main-inner h1, #recipe-outer h1{
+   padding: 5px;
    color: white;
    text-shadow: 
       2px 2px 0 #000,
@@ -31,6 +32,7 @@
       -1px 1px 0 #000,
       1px 1px 0 #000;
 }
+
 #main-inner img {
     border: black;
     border-width: 5px;
@@ -39,8 +41,9 @@
     height: auto;
     width: 150px;
 }
-/**/
-#button li, .button, #header{
+
+/*button styling*/
+#button li, .button{
     float: left;
     list-style: none;
     text-align: center;
@@ -53,7 +56,7 @@
   }
 
   #button li a {
-    padding: 25px;
+    padding: 50px;
     text-decoration: none;
     color: transparent;
     display: block
@@ -68,14 +71,28 @@
     transition-duration: 0.5s;
  }
 
+ #header{
+   display: block;
+   list-style: none;
+   text-align: center;
+   margin-top: 10px;
+   margin-right: 30px;
+   width: 250px;
+   line-height: 60px;
+   border-radius: 15px;
+   background-color: tomato;
+ }
+
 .button, #header{
    text-decoration: none;
+   margin-bottom: 10px;
 }
 
  .lasagna {
     background-image: url(img/lasagna.jpeg);
     position: relative;
     z-index: -1;
+    background-position: center;
  }
 
  .sesame {
@@ -96,8 +113,9 @@
 
 #recipe-outer img {
    border-radius: 15px;
-   width: 250px;
-   height: auto;
+   width: 300px;
+   height: 300px;
+   
 }
 
 #recipe-inner, #ingredients-inner-wrapper, #steps-wrapper{
@@ -109,4 +127,15 @@
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    text-align: left;
    margin-left: 50px;
+}
+
+#recipe-outer {
+   display: flex;
+   background-color: #1f0047;
+   border-radius: 15px;
+   padding: 20px;
+   margin-top: 10px;
+   width: 500px;
+   margin-left: 50px;
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
